collection creation with webpack

--- a/index.html
+++ b/index.html
@@ -82,12 +82,13 @@
                 <ul id="variousCollections">
                 </ul>
             </div>
+            <script src="dist/bundle.js"></script>
             <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
             <script type="text/javascript" src="js/materialize.min.js"></script>
-            <<!-- script src="src/getMovie.js"></script>
-            <script src="src/addtocollection.js"></script> -->
+            <!-- script src="src/getMovie.js">
+                </script>
+                <script src="src/addtocollection.js"></script> -->
             <script src="./src/modal.js"></script>
-            
             <!-- <script src="src/collectioncreation.js"></script>
             <script src="src/addMoviesToCollection.js"></script> -->
 </body>
